修复大量bug